2015-06-13 (unreleased)  Robin Gareus <robin@gareus.org>
* major GUI overhaul (LV2/openGL)
	- add configuration/settings
	- add preferences
	- add keyboard manuals & pedals
	- polish UI (3D model)
* new standalone jack application with GL GUI
* deprecate ALSA-MIDI (disabled by default)
* remove old tcl/tk prototype UI
* update Leslie. fix aliasing during acceleration and deceleration
* allow Leslie baffle mono pickup
* fix Leslie horn rotation (counter-clockwise)
* extend Leslie configuration, mic angle & position, horn radius, etc
* LV2 custom GUI for standalone Leslie
* portability updates (ARM-CPU tweaks, Windows + OSX versions & bundles)
* add presets for Kurzweil and Korg CX3
* improve LV2 plugin name consitency
* countless tweaks and bug fixes (see git log)

2013-09-10 (0.7.5)  Robin Gareus <robin@gareus.org>
* setBfree: exit if ALSA and JACK MIDI port cannot be created
* fix assignment of lower and pedal manual keys with transpose enable
* various leslie/LV2 fixes and improvements
* cleanup: remove cruft, fix possible mem-leaks
* add presets for leslie LV2
* update FSF address in GPL

2013-06-08 (0.7.4)  Robin Gareus <robin@gareus.org>
* fix typo in leslie default config
* calculate leslie reflections according to samplerate
* fix slow/fast percussion MIDI-toggle

2013-06-08 (0.7.3)  Robin Gareus <robin@gareus.org>
* hotfix: increase min buffersize to accommodate preset-names and full config

2013-06-08 (0.7.2)  Robin Gareus <robin@gareus.org>
* fix idle-interface name (follow lv2 upstream)
* add LV2 minimum bufsize
* add LV2 categories where appropriate
* allow to override CFLAGS on build

2013-05-21 (0.7.1)  Robin Gareus <robin@gareus.org>
* fix initialization (zero oscillators)
* build-system flags overhaul (honor CPPFLAGS, etc)
* fix LV2 GUI resizing

2013-05-09 (0.7.0)  Robin Gareus <robin@gareus.org>
* complete major work started on LV2 GUI (using openGL, ftgl, vera.ttf)
* LV2 state support
* allow to re-init complete state on the fly (LV2 worker)