@@ -1,2 +1,3 @@
 doc/setBfree.1
 doc/setBfreeUI.1
+doc/x42-whirl.1
