@@ -2,7 +2,7 @@
 Type=Application
 Name=setBfree
 GenericName=DSP tonewheel organ
-Comment=MIDI-controlled, software synthesizer using JACK
+Comment=MIDI-controlled, software synthesizer for JACK and LV2
 Icon=setBfree
 Exec=setBfreeUI
 Terminal=false
