@@ -1,0 +1,20 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
+.TH X42-WHIRL "1" "June 2015" "x42-whirl version 0.7.5-313" "User Commands"
+.SH NAME
+x42-whirl \- The B Whirl Speaker
+.SH SYNOPSIS
+.B x42-whirl
+
+.SH DESCRIPTION
+x42\-whirl \- JACK setBfree Whirl Speaker
+.PP
+This is a standalone JACK application of the LV2 plugin:
+"setBfree Whirl Speaker".
+.PP
+See also: <http://gareus.org/oss/lv2/b_whirl#extended>
+Website: <http://x42\-plugins.com/>
+.SH COPYRIGHT
+Copyright \(co GPL 2013\-2015 Robin Gareus <robin@gareus.org>
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
