@@ -8,13 +8,14 @@
 * deprecate ALSA-MIDI (disabled by default)
 * remove old tcl/tk prototype UI
 * update Leslie. fix aliasing during acceleration and deceleration
-* allow Leslie baffle mono pickup
+* allow Leslie horn & drum mono pickup
 * fix Leslie horn rotation (counter-clockwise)
 * extend Leslie configuration, mic angle & position, horn radius, etc
 * LV2 custom GUI for standalone Leslie
 * portability updates (ARM-CPU tweaks, Windows + OSX versions & bundles)
 * add presets for Kurzweil and Korg CX3
-* improve LV2 plugin name consitency
+* improve LV2 plugin name consistency
+* don't install standalone jack/overdrive test app.
 * countless tweaks and bug fixes (see git log)
 
 2013-09-10 (0.7.5)  Robin Gareus <robin@gareus.org>
